Prevent overflow

--- a/src/components/List/Row.css
+++ b/src/components/List/Row.css
@@ -40,6 +40,10 @@
 .rank {
   width: 5ch;
 }
+.name {
+  white-space: nowrap;
+  overflow: auto;
+}
 .best {
   margin-left: auto;
   width: 6ch;
